plugins {
    id 'java'
    id 'org.springframework.boot' version '4.0.2'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.planb'
version = '0.0.1-SNAPSHOT'
description = '2026 tourism data project : plan_b'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

// QueryDSL Version
ext {
    querydslVersion = "5.0.0"
    springAiVersion = "2.0.0"
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {

    /* Observability
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
     */

    /* Spring boot Web */
    implementation 'org.springframework.boot:spring-boot-starter-webmvc'

    /* Spring boot WebFlux */
    implementation 'org.springframework.boot:spring-boot-starter-webflux'

    /* Security */
    implementation 'org.springframework.boot:spring-boot-starter-security'

    /* Security(Jwt) */
    implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
    implementation 'io.jsonwebtoken:jjwt-impl:0.12.3'
    implementation 'io.jsonwebtoken:jjwt-jackson:0.12.3'

    /* WebSocket */
    implementation 'org.springframework.boot:spring-boot-starter-websocket'
    implementation 'org.springframework.boot:spring-boot-starter-flyway'

    /* DB Migration (Flyway) */
    implementation 'org.flywaydb:flyway-mysql'
    implementation 'org.flywaydb:flyway-core'

    /* Spring Boot Dev */
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    compileOnly 'org.projectlombok:lombok'

    /* JSON */
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'


    /* RDBMS */
    runtimeOnly 'com.mysql:mysql-connector-j'

    /* Database */
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'

    /* Lombok */
    annotationProcessor 'org.projectlombok:lombok'

    /*QUERY-DSL*/
    implementation "com.querydsl:querydsl-jpa:${querydslVersion}:jakarta"
    annotationProcessor "com.querydsl:querydsl-apt:${querydslVersion}:jakarta"
    annotationProcessor "jakarta.annotation:jakarta.annotation-api"
    annotationProcessor "jakarta.persistence:jakarta.persistence-api"


    /* Swagger */
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:3.0.3'

    /* AI */
    implementation 'org.springframework.ai:spring-ai-starter-model-openai'

    /* MCP Server */
    implementation 'org.springframework.ai:spring-ai-starter-mcp-server'
    implementation 'org.springframework.ai:spring-ai-starter-mcp-client'



    /* Test */
    testImplementation 'org.springframework.boot:spring-boot-starter-actuator-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-data-jpa-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-data-redis-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-security-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
    testImplementation "org.springframework.boot:spring-boot-testcontainers"
    testImplementation "org.testcontainers:testcontainers:1.21.3"
    testImplementation "org.testcontainers:junit-jupiter:1.21.3"
    testImplementation "org.testcontainers:testcontainers-mysql:2.0.5"
    testCompileOnly 'org.projectlombok:lombok'
    testAnnotationProcessor 'org.projectlombok:lombok'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testImplementation 'io.projectreactor:reactor-test'

}

// Querydsl 설정
def generated = 'src/main/generated'

// querydsl QClass 파일 생성 위치를 지정
tasks.withType(JavaCompile).configureEach {
    options.getGeneratedSourceOutputDirectory().set(file(generated))
}

// java source set 에 querydsl QClass 위치 추가
sourceSets {
    main.java.srcDirs += [generated]
}

// gradle clean 시에 Qclass 디렉토리 삭제
clean {
    delete file(generated)
}

dependencyManagement {
    imports {
        mavenBom "org.springframework.ai:spring-ai-bom:$springAiVersion"
    }
}

tasks.named('test') {
    useJUnitPlatform {
        excludeTags 'external'
    }
}

tasks.register('externalTest', Test) {
    useJUnitPlatform {
        includeTags 'external'
    }
    group = 'verification'
    description = '실제 외부 API(OpenAI 등)를 호출하는 통합테스트만 실행'
}
